--- a/style.css
+++ b/style.css
@@ -17,13 +17,18 @@
   padding: 12px 16px;
 }
 
-.dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content, .showDropdown {
   display: block;
 }
 
-.dropdown-item:hover{
+.dropdown-item:hover {
   background-color:yellow
 }
+
+.highlighted{
+  background-color:pink;
+}
+
 
 li {
   list-style-type:none;
