--- a/style.css
+++ b/style.css
@@ -17,16 +17,16 @@
   padding: 12px 16px;
 }
 
- .dropdown-content, .showDropdown {
+ .dropdown:hover, .dropdown-content, .showDropdown {
   display: block;
 }
 
 .dropdown-item:hover {
-  background-color:yellow
+  background-color:gray
 }
 
 .highlighted{
-  background-color:pink;
+  background-color:gray;
 }
 
 
