--- a/style.css
+++ b/style.css
@@ -5,19 +5,44 @@
 .dropdown {
   position: relative;
   display: inline-block;    
+
+}
+
+#input-field{
+  border-radius:5px;
+  width: 162px;
+  min-height:30px;
+  border-color: lightgray;
+  border-width:thin;
+  border:1px solid #999
+
+  
+}
+
+input::-webkit-search-cancel-button {
+    /* Remove default */
+    -webkit-appearance: none;
+    height: 15px;
+    width: 15px;
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23777'><path d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/></svg>");
+    cursor: pointer;
+
+}
+
+input:focus{
+  outline: none;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  z-index: 1;
   background-color: #f1f1f1;
-  min-width: 162px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  width: 162px;
   padding: 12px 16px;
 }
 
- .dropdown:hover, .dropdown-content, .showDropdown {
+.dropdown:hover .dropdown-content, .showDropdown{
   display: block;
 }
 
@@ -35,5 +60,5 @@ li {
 }
 
 .hidden { 
-  display: none !important;
+  display: none ;
 }
