--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@
 .dropdown {
   position: relative;
   display: inline-block;    
+}
 
+.dropdown-item{
+  margin:5px
 }
 
 #input-field{
@@ -36,13 +39,12 @@ input:focus{
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: #efefef;
   border-radius: 5px;
   width: 162px;
-  padding: 12px 16px;
-}
+  }
 
-.dropdown:hover .dropdown-content, .showDropdown{
+.dropdown:hover .dropdown-content{
   display: block;
 }
 
